--- a/src/app/user/components/uploads/uploads.component.html
+++ b/src/app/user/components/uploads/uploads.component.html
@@ -109,7 +109,7 @@
   </div>
 </section>
 <!-- DashBoard Home Ends -->
-<template #deleteTemplateRef let-deleteDialog="dialogRef">
+<!-- <ng-template #deleteTemplateRef let-deleteDialog="dialogRef">
   <div class="deleteModal">
     <div class="modal-header">
       <button type="button" class="close" (click)="deleteDialog.close(true)"><span aria-hidden="true">&times;</span>
@@ -127,9 +127,9 @@
       <button type="button" class="btn btn-default" (click)="deleteDialog.close(true)">Close</button>
     </div>
   </div>
-</template>
+</ng-template> -->
 
-<template #downloadTemplateRef let-downloadDialog="dialogRef">
+<!-- <ng-template #downloadTemplateRef let-downloadDialog="dialogRef">
   <div class="downloadModal">
     <div class="modal-header">
       <button type="button" class="close" (click)="downloadDialog.close(true)"><span aria-hidden="true">&times;</span>
@@ -160,7 +160,7 @@
       <button type="button" class="btn btn-default" (click)="downloadDialog.close(true)">Close</button>
     </div>
   </div>
-</template>
+</ng-template> -->
 <div class="modal fade" id="myModal1" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
