--- a/src/app/front/components/subscribe/subscribe.component.html
+++ b/src/app/front/components/subscribe/subscribe.component.html
@@ -72,35 +72,9 @@
 </section>
 <!-- Login Page Ends -->
 
-<template #couponTemplateRef let-couponDialog="dialogRef">
-  <div class="downloadModal">
-    <div class="modal-header">
-      <button type="button" class="close" (click)="couponDialog.close(true)"><span aria-hidden="true">&times;</span>
-      </button>
-      <h1 class="modal-title" style="font-size: 26px" id="myModalLabel">Enter Your Coupon</h1>
-    </div>
-    <div class="modal-body" style="margin: -10px 0px 40px;padding: 10px;">
-      <div class="alert alert-danger fade in" *ngIf="errorMsg" style="padding: 10px;text-align: center;margin: 15px 20px;">
-        {{errorMsg }}
-      </div>
-      <div class="form-group form-group col-xs-4 col-xs-offset-4">
-        <label class="srOnly">Coupon Code</label>
-        <input type="text"
-               class="col-xs-12"
-               name="cId"
-               placeholder="Code"
-               #couponCode style="height: 36px;">
-      </div>
-    </div>
+<!-- <ng-template #couponTemplateRef let-couponDialog="dialogRef">
 
-    <div class="modal-footer">
-      <button type="button" class="btn btn-primary" (click)="onBtnSubscribeClick(couponDialog, couponCode.value);"><span
-        area-hidden="true"></span> Apply
-      </button>
-      <button type="button" class="btn btn-default" (click)="onBtnSubscribeClick(couponDialog, false);">Skip</button>
-    </div>
-  </div>
-</template>
+</ng-template> -->
 
 
 <!-- <ng-template #content let-c="close" let-d="dismiss">
