--- a/src/app/front/components/subscribe/subscribe.new.component.html
+++ b/src/app/front/components/subscribe/subscribe.new.component.html
@@ -102,18 +102,15 @@
     </div>
   </div>
 </div>
-<template #couponTemplateRef let-couponDialog="dialogRef">
+<ng-template #couponTemplateRef let-couponDialog="dialogRef">
   <div class="downloadModal">
     <div class="modal-header">
       <button type="button" class="close" (click)="couponDialog.close(true)"><span aria-hidden="true">&times;</span>
       </button>
       <h1 class="modal-title" style="font-size: 26px" id="myModalLabel">Enter Your Coupon</h1>
     </div>
-    <div class="modal-body" style="margin: -10px 0px 40px;
-    padding: 10px;">
-      <div class="alert alert-danger fade in" *ngIf="errorMsg" style="    padding: 10px;
-    text-align: center;
-    margin: 15px 20px;">
+    <div class="modal-body" style="margin: -10px 0px 40px;padding: 10px;">
+      <div class="alert alert-danger fade in" *ngIf="errorMsg" style="padding: 10px;text-align: center;margin: 15px 20px;">
         {{errorMsg }}
       </div>
       <div class="form-group form-group col-xs-4 col-xs-offset-4">
@@ -133,4 +130,4 @@
       <button type="button" class="btn btn-default" (click)="onBtnSubscribeClick(couponDialog, false);">Skip</button>
     </div>
   </div>
-</template>
+</ng-template>
