--- a/src/app/user/components/settings/subscriptions/subscriptions.component.html
+++ b/src/app/user/components/settings/subscriptions/subscriptions.component.html
@@ -36,7 +36,7 @@
   </div>
 </div>
 
-<template #unsubscribeTemplateRef let-unsubscribeDialog="dialogRef">
+<!-- <ng-template #unsubscribeTemplateRef let-unsubscribeDialog="dialogRef">
   <div class="unsubscribeModal">
     <div class="modal-header">
       <h1 class="modal-title text-center" id="myModalLabel">End Subscription</h1>
@@ -67,4 +67,4 @@
       </button>
     </div>
   </div>
-</template>
+</ng-template> -->
