dynamic relative height updated

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -315,7 +315,7 @@
                 <div class="sport-name1">
                   <div class="name">MLB Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="mlbContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of baseballArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -337,7 +337,7 @@
                 <div class="sport-name1">
                   <div class="name">NFL Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="nflContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of footballArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -361,7 +361,7 @@
                 <div class="sport-name1">
                   <div class="name">NBA Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="nbaContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of basketballArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -383,7 +383,7 @@
                 <div class="sport-name1">
                   <div class="name">NHL Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="nhlContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of nhlArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -407,7 +407,7 @@
                 <div class="sport-name1">
                   <div class="name">MMA Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="mmaContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of mmaArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -429,7 +429,7 @@
                 <div class="sport-name1">
                   <div class="name">Nascar Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="nascarContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of nascarArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -453,7 +453,7 @@
                 <div class="sport-name1">
                   <div class="name">Soccer Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="soccerContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of soccerArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
@@ -475,7 +475,7 @@
                 <div class="sport-name1">
                   <div class="name">PGA Articles</div>
                 </div>
-                <div class="sport-content">
+                <div class="sport-content" id="pgaContent">
                   <div class="single-article" data-toggle="modal" data-target="#myModal2" (click)="switchToSingle(article , true)" *ngFor="let article of golfArticles;let i = index;">
                     <div class="article-with-thumb" *ngIf="i == 0">
                       <div class="article-img">
