--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -5,8 +5,10 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="loginDetailsWrapper">
           <div class="loginLftWrapper">
-            <img src="../../../../assets/images/login_lft_img.png" alt="" class="img-responsive"/>
+            <img src="../../../../assets/images/packages.png" alt="" class="img-responsive"/>
+
           </div>
+
           <div class="loginRghtWrapper">
             <div class="formWrapper">
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
