RP change plus login page change

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -204,9 +204,9 @@
 
 
 
-          <div class="ylwTpBx clearfix" style="float:none;">
-            <h3 > Featured Articles</h3>
-              <img src="../../../../assets/images/RP_Logo.png" style= "max-height: max-content; max-width:50px; float: right"/>
+          <div class="ylwTpBx clearfix" style="float:none; padding-top: 0px; padding-bottom: 0px;">
+            <h3 style="padding-top: 25px; padding-bottom: 25px"> Featured Articles</h3>
+              <img src="../../../../assets/images/RP_Logo1.png" style= "min-height: max-content; max-width: max-content; float: right; padding-top:15px"/>
 
 
             <!-- <p><img src="../../../../assets/
@@ -305,7 +305,7 @@
     <h3>Articles by Sport</h3>
     <!-- <p><img src="../../../../assets/images/rght_icn3.png" alt="" class="img-responsive"></p>
   </div> -->
-          <div class="row no-gutters">
+          <div class="row">
             <div class="col-md-6">
               <div class="sport-article1">
 
