--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -203,11 +203,14 @@
 
         <div class="indexNPrt2Mid">
 
+          <div class="ylwTpBx clearfix" style="float:none; padding-top: 0px; padding-bottom: 0px;">
+            <h3 style="padding-top: 25px; padding-bottom: 25px"> Featured Articles</h3>
+              <img src="../../../../assets/images/RP_Logo1.png" style= "min-height: max-content; max-width: max-content; float: right; padding-top:15px"/>
+          <!-- </div> -->
 
-
-          <div class="ylwTpBx clearfix" style="float:none;">
+          <!-- <div class="ylwTpBx clearfix" style="float:none;">
             <h3 > Featured Articles</h3>
-              <img src="../../../../assets/images/RP_Logo.png" style= "max-height: max-content; max-width:50px; float: right"/>
+              <img src="../../../../assets/images/RP_Logo.png" style= "max-height: max-content; max-width:50px; float: right"/> -->
 
 
             <!-- <p><img src="../../../../assets/
