--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -203,7 +203,7 @@
 
         <div class="indexNPrt2Mid">
 
-          <div class="ylwTpBx clearfix" style="float:none; padding-top: 0px; padding-bottom: 0px;">
+          <div class="ylwTpBx clearfix" style="float:none; padding-top: 0px; padding-bottom: 0px;padding-right:0px">
             <h3 style="padding-top: 25px; padding-bottom: 25px"> Featured Articles</h3>
               <img src="../../../../assets/images/RP_Logo1.png" style= "min-height: max-content; max-width: max-content; float: right; padding-top:15px"/>
           <!-- </div> -->
