RP change plus login page change

--- a/src/app/front/components/home/front-home.component.css
+++ b/src/app/front/components/home/front-home.component.css
@@ -98,6 +98,7 @@
 .sport-article:hover .sport-name2{
   text-decoration: underline;
   opacity: 1.0;
+  cursor: pointer;
 }
 
 .sport-article .sport-name {
@@ -232,4 +233,10 @@ section.indexNPrt2 {
   padding-bottom: 0px;
   margin-bottom: 0px;
   background: #000000;
+}
+#signup2{
+  float:none;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  padding-right:0px
 }
