--- a/src/app/front/components/login/login.component.html
+++ b/src/app/front/components/login/login.component.html
@@ -1,13 +1,14 @@
 <!-- Login Page Starts -->
 <section class="loginDetails">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="loginDetailsWrapper">
-          <div class="loginLftWrapper">
-            <img src="../../../../assets/images/login_lft_img.png" alt="" class="img-responsive"/>
+          <div class="row">
+          <div class="col-xs-5 loginLftWrapper" style="align-content: center; align-items: center; margin:25px;">
+            <img src="../../../../assets/images/packages.png" alt="" class="img-responsive"/>
+
           </div>
-          <div class="loginRghtWrapper">
+<div class="col-xs-1"></div>
+
+          <div class="col-xs-5 loginRghtWrapper" style="margin: 5px;size: 50%;background: rgba(255,255,255,0.4);
+    padding: 30px;">
             <div class="formWrapper">
               <h3><span class="licnWrapper"><img src="../../../../assets/images/login_title_icn.png" alt=""
                                                  class="img-responsive"/></span><span>Login</span></h3>
@@ -61,9 +62,7 @@
                 Now!</a> It’s really simple and you can start enjoying all the benefits!</p>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+          </div>
 </section>
 <!-- Login Page Ends -->
