--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -217,7 +217,7 @@
             cn3.png" alt="" class="img-responsive"></p> -->
           </div>
 
-          <div class="featuredSection">
+          <div class="featuredSection" style="margin-bottom: 20px;">
 
 
             <div class="row">
@@ -301,6 +301,10 @@
            </div>
          </div>
           </div>
+          </div>
+          <div id ="signup2" class="ylwTpBx clearfix" style="float:none; text-align: center; padding-top: 20px; padding-bottom: 20px;padding-right:0px">
+             <a routerLink="/signup" style="font-weight: 700; font-size: x-large; font-family:'Roboto Condensed', sans-serifm;  color: rgba(0,0,0,0.8);">Start Your Free Trial Today</a>
+
           </div>
 
 
