--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -24,8 +24,10 @@
           <!--<div class="plan-trial-period">{{'('+plan.trial_period_days+'-days free trial)'}}</div>-->
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
           </button> -->
-          <button *ngIf="!isLogin" class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Subscribe
+          (7 DAY FREE TRIAL)
+          <button *ngIf="!isLogin" class="btn-subscribe btn-lg btn-primary" (click)="onBtnSubscribeClick(plan)">Start Your Free Trial
           </button>
+          <p style="font-size: x-small;padding:2px; color:#f8c534;">** You will automatically be charged for the listed rate at the end of your 7 day trial </p>
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="open(content, plan)">Subscribe
           </button> -->
 
