--- a/src/app/front/components/.contact-analyzer/contact-analyzer.component.html
+++ b/src/app/front/components/.contact-analyzer/contact-analyzer.component.html
@@ -40,19 +40,19 @@
 </section>
 
 <!--<section class="infoSection2">-->
-  <!--<div class="container ">-->
-    <!--<div class="row">-->
-      <!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">-->
-        <!--<div class="infoSec2Lft">-->
-          <!--<h1 class="infoSec2Hedin"><span>Stay in sync </span> with our free browser extension for Chrome and Firefox-->
-          <!--</h1>-->
+<!--<div class="container ">-->
+<!--<div class="row">-->
+<!--<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">-->
+<!--<div class="infoSec2Lft">-->
+<!--<h1 class="infoSec2Hedin"><span>Stay in sync </span> with our free browser extension for Chrome and Firefox-->
+<!--</h1>-->
 
-          <!--<p class="infoPara"><strong>RotoTracker Sync </strong> keeps your data up to date with just one click. Free-->
-            <!--for all RotoTracker users <span>in the Chrome and Firefox app stores.</span></p>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
+<!--<p class="infoPara"><strong>RotoTracker Sync </strong> keeps your data up to date with just one click. Free-->
+<!--for all RotoTracker users <span>in the Chrome and Firefox app stores.</span></p>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
 
 <!--</section>-->
 
@@ -92,7 +92,8 @@
           </h1>
           <p class="infoSecHedin">Crush the competition.</p>
 
-          <p class="infoPara">Our contest analyzer is easy to use. Once you have your results uploaded you can easily customize what you want to see. Let's say you want to see what your ROI is? What about over time? What months or sports are you best at on DFS? Who are your top enemies in h2h's? Do you win more at GPP's or double ups? You can seamlessly track all of this and more!. </p>
+          <p class="infoPara">Our contest analyzer is easy to use. Once you have your results uploaded you can easily customize what you want to see. Let's say you want to see what your ROI is? What about over time? What months or sports are you best at on DFS? Who are your
+            top enemies in h2h's? Do you win more at GPP's or double ups? You can seamlessly track all of this and more!. </p>
 
           <!--<a href="" class="bowerDwnBtn">Sign Up For Free and give RotoTracker a spin!</a>-->
         </div>
