--- a/src/app/front/components/change-password/change-password.component.html
+++ b/src/app/front/components/change-password/change-password.component.html
@@ -4,7 +4,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="loginDetailsWrapper">
           <div class="loginLftWrapper">
-            <img src="../../../../assets/images/login_lft_img.png" alt="" class="img-responsive"/>
+            <img src="../../../../assets/images/login_lft_img.png" alt="" class="img-responsive" />
           </div>
           <div class="loginRghtWrapper">
             <div class="formWrapper">
@@ -27,8 +27,7 @@
                   <div class="alert alert-danger my-alert" *ngIf="changePasswordForm.get('password').errors?.maxlength">
                     Too long password
                   </div>
-                  <div class="alert alert-danger fade in my-alert"
-                       *ngIf="changePasswordForm.get('password').touched && changePasswordForm.get('password').errors">
+                  <div class="alert alert-danger fade in my-alert" *ngIf="changePasswordForm.get('password').touched && changePasswordForm.get('password').errors">
                     Password is required field.
                   </div>
                 </div>
@@ -36,9 +35,7 @@
                   <label class="srOnly">Confirm Password</label>
                   <input type="text" name="cPwd" formControlName="confirmPassword" placeholder="Enter password again">
                 </div>
-                <input type="button" value="Submit" class="formBtn"
-                       [disabled]="!changePasswordForm.valid"
-                       (click)="onBtnSubmitClick()">
+                <input type="button" value="Submit" class="formBtn" [disabled]="!changePasswordForm.valid" (click)="onBtnSubmitClick()">
               </form>
             </div>
           </div>
