--- a/src/app/front/components/.excel-tool-nfl/nfl-excel-tool.component.html
+++ b/src/app/front/components/.excel-tool-nfl/nfl-excel-tool.component.html
@@ -64,7 +64,9 @@
             </div>
           </div>
           <div class="mlbInfoBot">
-            <p>To pull all data needed for algorithm click Refresh Todays Data. After all data is downloaded, you can filter players which you would like to use based on team or injury status. To exclude players from some team select No in Include column. To eliminate players which have injury tag, set Eliminate injury level field to the level of injury which is not acceptable for your players to be in a lineups. Available injury levels are: Out, Doubtful, Questionable and Probable respectively So, if you select Doubtful level all players which have injury tag Out and Doubtful level will be removed.</p>
+            <p>To pull all data needed for algorithm click Refresh Todays Data. After all data is downloaded, you can filter players which you would like to use based on team or injury status. To exclude players from some team select No in Include
+              column. To eliminate players which have injury tag, set Eliminate injury level field to the level of injury which is not acceptable for your players to be in a lineups. Available injury levels are: Out, Doubtful, Questionable and
+              Probable respectively So, if you select Doubtful level all players which have injury tag Out and Doubtful level will be removed.</p>
 
             <p>Now, after you set filters for players, click on Transfer Players button to move all players to sheets for player analysis and lineups generating.</p>
           </div>
@@ -82,7 +84,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="mlbDescSectionWrap">
           <div class="mlbDescItm">
-            <img src="../../../../assets/images/tool_fd_analysis.JPG"  alt="" class="img-responsive mlbDescImg">
+            <img src="../../../../assets/images/tool_fd_analysis.JPG" alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">FanDual Analysis Sheet</a>
               <p class="mlbDescPara">Based on a bat hand and pitcher throw hand stats, projection and salary we generate sheet where you can see all important stats for batter vs pitcher. Color coding is making easier to notice good and bad matchups for players:</p>
@@ -91,7 +93,7 @@
           </div>
 
           <div class="mlbDescItm">
-            <img src="../../../../assets/images/tool_dk_analysis.JPG"  alt="" class="img-responsive mlbDescImg">
+            <img src="../../../../assets/images/tool_dk_analysis.JPG" alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">DraftKing Analysis Sheet</a>
               <p class="mlbDescPara">Similar to Batter analysis sheet we are offering matchup analysis for pitchers. Opponent batter stats are batting stats of opponent team:</p>
@@ -100,7 +102,7 @@
 
           </div>
           <div class="mlbDescItm mlbDescItm2">
-            <img src="../../../../assets/images/tool_dk_optimizer.JPG"  alt="" class="img-responsive mlbDescImg">
+            <img src="../../../../assets/images/tool_dk_optimizer.JPG" alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">Multi Lineups Sheet</a>
               <p class="mlbDescPara">This is the sheet where you can generate your lineups. On this sheet you can set few options:</p>
@@ -115,7 +117,7 @@
 
           </div>
           <div class="mlbDescItm mlbDescItm2">
-            <img src="../../../../assets/images/tool_fd_lineups.JPG"  alt="" class="img-responsive mlbDescImg">
+            <img src="../../../../assets/images/tool_fd_lineups.JPG" alt="" class="img-responsive mlbDescImg">
             <div class="mlbDescItmTp">
               <a href="javascript:void(0)" class="mlbDescHedin">Fanduel/Drafktings Lineups Sheets</a>
               <p class="mlbDescPara">In these sheets you will get your generated lineups. You will notice that cell for player name is colored in some color, it means that player has some injury status assigned.</p>
