--- a/src/app/front/components/daily-lineup/daily-lineup.component.html
+++ b/src/app/front/components/daily-lineup/daily-lineup.component.html
@@ -13,8 +13,8 @@
           <span style="font-size: 18px;">MLB starting lineups updated live as they are released.</span>
         </div>
         <!-- <div class="dTabs"> -->
-          <!-- Nav tabs -->
-          <!-- <rp-tab-view [tabs]="lineupTabs"
+        <!-- Nav tabs -->
+        <!-- <rp-tab-view [tabs]="lineupTabs"
                        [activeTab]="activeTab"
                        (tabChanged)="onLineupTabChanged($event)"></rp-tab-view>
         </div> -->
@@ -37,18 +37,11 @@
 
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active">
-                  <a (click)="getData('MLB', 'today')"
-                     role="tab"
-                     data-toggle="tab"
-                     aria-controls="All">Today
+                  <a (click)="getData('MLB', 'today')" role="tab" data-toggle="tab" aria-controls="All">Today
                   </a>
                 </li>
                 <li role="presentation">
-                  <a href="#Urgent"
-                     (click)="getData('MLB', 'yesterday')"
-                     role="tab"
-                     data-toggle="tab"
-                     aria-controls="Urgent">Yesterday
+                  <a href="#Urgent" (click)="getData('MLB', 'yesterday')" role="tab" data-toggle="tab" aria-controls="Urgent">Yesterday
                   </a>
                 </li>
                 <!-- <li role="presentation">
@@ -73,7 +66,7 @@
                     <div class="lineUpTeamNameWraper">
                       <div class="lineUpTeamNameWrap">
                         <p class="teamName">{{currLineup.first_team.name}}</p>
-                        <img [attr.src]="currLineup.first_team.logo_url" alt="" class="img-responsive"/>
+                        <img [attr.src]="currLineup.first_team.logo_url" alt="" class="img-responsive" />
                       </div>
 
                     </div>
@@ -97,8 +90,7 @@
                         <span style="width: 125px;color: #7373d6;">Lineup Pending...</span>
                       </li>
                       <li *ngFor="let currPlayer of currLineup.first_team.lineup_players">
-                          <span>{{currPlayer.player_position}}</span>
-                          {{currPlayer.player_first_name+' '+currPlayer.player_last_name}}
+                        <span>{{currPlayer.player_position}}</span> {{currPlayer.player_first_name+' '+currPlayer.player_last_name}}
                       </li>
 
                       <li>
@@ -106,12 +98,12 @@
                       </li>
 
                       <li>
-                          <div style="display: inline-block;">{{currLineup.first_team.name}}:</div>
-                          <p class="pitcher"> {{currLineup.first_team.pitcher.player_first_name+' '+currLineup.first_team.pitcher.player_last_name}} </p>
+                        <div style="display: inline-block;">{{currLineup.first_team.name}}:</div>
+                        <p class="pitcher"> {{currLineup.first_team.pitcher.player_first_name+' '+currLineup.first_team.pitcher.player_last_name}} </p>
                       </li>
                       <li>
-                          <div style="display: inline-block;">{{currLineup.second_team.name}}:</div>
-                          <p class="pitcher"> {{currLineup.second_team.pitcher.player_first_name+' '+currLineup.second_team.pitcher.player_last_name}} </p>
+                        <div style="display: inline-block;">{{currLineup.second_team.name}}:</div>
+                        <p class="pitcher"> {{currLineup.second_team.pitcher.player_first_name+' '+currLineup.second_team.pitcher.player_last_name}} </p>
                       </li>
 
                     </ul>
@@ -120,8 +112,7 @@
                         <span style="width: 125px;color: #7373d6;">Lineup Pending...</span>
                       </li>
                       <li *ngFor="let currPlayer of currLineup.second_team.lineup_players">
-                          <span>{{currPlayer.player_position}}</span>
-                          {{currPlayer.player_first_name+' '+currPlayer.player_last_name}}
+                        <span>{{currPlayer.player_position}}</span> {{currPlayer.player_first_name+' '+currPlayer.player_last_name}}
                       </li>
                     </ul>
                   </div>
