--- a/src/app/front/components/header/front-header.component.css
+++ b/src/app/front/components/header/front-header.component.css
@@ -1,10 +1,12 @@
 /* The container <div> - needed to position the dropdown content */
+
 .lineup-dropdown {
   position: relative;
   display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
+
 .dropdown-content {
   display: none;
   position: absolute;
@@ -16,6 +18,7 @@
 }
 
 /* Links inside the dropdown */
+
 .dropdown-content a {
   color: black;
   padding: 5px 12px !important;
@@ -24,6 +27,7 @@
 }
 
 /* Change color of dropdown links on hover */
+
 .dropdown-content a:hover {
   background-color: #f1f1f1
 }
@@ -52,9 +56,11 @@
 }
 
 /* Show the dropdown menu on hover */
+
 .lineup-dropdown:hover .dropdown-content {
   display: block;
-  -webkit-animation: mymove 250ms; /* Safari 4.0 - 8.0 */
+  -webkit-animation: mymove 250ms;
+  /* Safari 4.0 - 8.0 */
   animation: mymove 250ms;
   -webkit-animation-fill-mode: forwards;
 }
@@ -63,7 +69,6 @@
   .dropdown-content:after {
     display: none;
   }
-
   .dropdown-content {
     left: 20px;
     right: 20px;
@@ -71,6 +76,7 @@
 }
 
 /* Safari 4.0 - 8.0 */
+
 @-webkit-keyframes mymove {
   0% {
     opacity: 0
@@ -81,6 +87,7 @@
 }
 
 /* Standard syntax */
+
 @keyframes mymove {
   0% {
     opacity: 0
@@ -108,9 +115,7 @@
   }
 }*/
 
-.home-profile {
-
-}
+.home-profile {}
 
 #rss {
   text-align: center;
@@ -138,33 +143,32 @@
 header {
   position: fixed;
   width: 100%;
-  top:0;
+  top: 0;
   left: 0;
   right: 0;
   z-index: 2;
 }
 
-@media (max-width: 1150px){
+@media (max-width: 1150px) {
   .header-margin {
     height: 76px;
   }
 }
-@media (max-width: 767px){
+
+@media (max-width: 767px) {
   .header-margin {
     height: 69px;
   }
 }
 
-@media (max-width: 479px){
+@media (max-width: 479px) {
   .header-margin {
     height: 65px;
   }
 }
 
-.bottomHeader{
-
+.bottomHeader {
   border-bottom-color: #f8c534;
   border-bottom-width: 10px;
   border-bottom-style: double;
 }
-
