--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -69,7 +69,7 @@
           </div>
 
           <div class="menuToggle">
-            <img src="../../../../assets/images/menu-toggle.png" alt=""/>
+            <img src="../../../../assets/images/menu-toggle.png" alt="" />
           </div>
           <div class="mainMenu">
             <div class="closeBtn">
@@ -77,8 +77,7 @@
             </div>
             <ul>
               <li (window:resize)="onResize($event)">
-                <a *ngIf="headerIsStacked && loggedUser" style="width: auto"
-                   routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
+                <a *ngIf="headerIsStacked && loggedUser" style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
                   Dashboard
                 </a>
               </li>
@@ -134,16 +133,14 @@
               <li class="loginBtn" *ngIf="!isLoggedIn"><a routerLink="/login">Login</a></li>
               <li class="signUpBtn" *ngIf="!isLoggedIn"><a routerLink="/signup">Sign Up</a></li>
               <li class="signUpBtn" *ngIf="isLoggedIn">
-                <a appMobileHidden style="width: auto"
-                   routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
+                <a appMobileHidden style="width: auto" routerLink="{{(role == 'user' || role == 'provider')? '/user' : '/admin'}}">
                   Dashboard
                 </a>
               </li>
               <!--<li class="loginBtn" *ngIf="isLoggedIn"><a (click)="btnLogoutClicked()">Logout</a></li>-->
               <li class="home-profile" *ngIf="isLoggedIn">
                 <div class="dropdown">
-                  <a href="javascript:void(0)" class="btn btn-default dropdown-toggle" type="button" id="profileDrpdwn"
-                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  <a href="javascript:void(0)" class="btn btn-default dropdown-toggle" type="button" id="profileDrpdwn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                 <span class="icnWrapperS">
                   <!--<img src="../../../../assets/images/dashboard_profile_img.png" alt=""-->
                   <!--class="img-responsive"/>-->
