--- a/src/app/user/components/graph/graph.component.html
+++ b/src/app/user/components/graph/graph.component.html
@@ -2,7 +2,7 @@
 <section class="dashboardHome">
   <div class="container">
     <div class="common-loader" *ngIf="isLoading">
-      <md-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></md-progress-spinner>
+      <mat-progress-spinner mode="indeterminate" color="accent" style="width: 50px;height: 50px"></mat-progress-spinner>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 dashboardContainer">
