--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<div class="startup-loader">
+  <img src="assets/images/rings.svg" alt="loader" style="width: 80px;height: 80px">
+</div>
 <router-outlet></router-outlet>
 <div id="myModal" class="modal fade" role="dialog" #subscriptionAlert>
   <div class="modal-dialog">
