--- a/src/app/user/components/header/user-header.component.html
+++ b/src/app/user/components/header/user-header.component.html
@@ -60,11 +60,11 @@
           </div>
 
           <div class="menuToggle">
-            <img src="../../../../assets/images/menu-toggle.png" alt=""/>
+            <img src="../../../../assets/images/menu-toggle.png" alt="Toggle Image"/>
           </div>
           <div class="mainMenu">
             <div class="closeBtn">
-              <span><img src="../../../../assets/images/close_icn.png" alt="" class="img-responsive"/></span>
+              <span><img src="../../../../assets/images/close_icn.png" alt="Close" class="img-responsive"/></span>
             </div>
             <ul>
               <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
