--- a/src/app/front/components/footer/front-footer.component.html
+++ b/src/app/front/components/footer/front-footer.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 topFooterWrapper">
-          <h1 class="footerHdin">About Us</h1>
+          <h2 class="footerHdin">About Us</h2>
           <a href="#" class="logoWrapper"><img style="margin: 0" src="../../../../assets/images/logo.png" alt="LOGO" class="img-responsive"/></a>
           <p class="footerPara">RotoPros.com is a daily fantasy sports analytics platform that offers the best tools in the industry. RotoPros offers lineup optimizers, projections, daily sports content, podcasts, tools, and many premium features.</p>
         </div>
@@ -21,10 +21,10 @@
         <div class="col-xs-6 col-sm-3 col-md-3 col-lg-3">
           <h1 class="footerHdin">Follow Us On :</h1>
           <ul class="footerSocialLinks">
-            <li><a href="https://www.facebook.com/RotoPros" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="" class="img-responsive"/></a></li>
-            <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="" class="img-responsive"/></a></li>
-            <li><a href="https://www.instagram.com/dfsRotoPros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="" class="img-responsive"/></a></li>
-            <li><a href="mailto:support@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="" class="img-responsive"/></a></li>
+            <li><a href="https://www.facebook.com/RotoPros" target="_blank"><img src="../../../../assets/images/footer_facebook_icn.svg" alt="Facebook Icon" class="img-responsive"/></a></li>
+            <li><a href="https://twitter.com/RotoProsDFS" target="_blank"><img src="../../../../assets/images/footer_twitter_icn.png" alt="Twitter Icon" class="img-responsive"/></a></li>
+            <li><a href="https://www.instagram.com/dfsRotoPros/" target="_blank"><img src="../../../../assets/images/footer_insta_icn.png" alt="Instagram Icon" class="img-responsive"/></a></li>
+            <li><a href="mailto:support@rotopros.com"><img src="../../../../assets/images/footer_email_icn.png" alt="Email Icon" class="img-responsive"/></a></li>
           </ul>
         </div>
       </div>
