--- a/src/app/front/components/header/front-header.component.html
+++ b/src/app/front/components/header/front-header.component.html
@@ -69,11 +69,11 @@
           </div>
 
           <div class="menuToggle">
-            <img src="../../../../assets/images/menu-toggle.png" alt="" />
+            <img src="../../../../assets/images/menu-toggle.png" alt="Toggle Image" />
           </div>
           <div class="mainMenu">
             <div class="closeBtn">
-              <span><img src="../../../../assets/images/close_icn.png" alt="" class="img-responsive"/></span>
+              <span><img src="../../../../assets/images/close_icn.png" alt="Close" class="img-responsive"/></span>
             </div>
             <ul>
               <li (window:resize)="onResize($event)">
