Spec sheet additions

--- a/src/app/front/components/home/front-home.component.html
+++ b/src/app/front/components/home/front-home.component.html
@@ -82,6 +82,7 @@
 <!-- BoPrt1 Ends -->
 
 <!-- Match Details Starts -->
+
 <section class="indexNPrt2">
   <div class="container-fluid">
     <div class="row">
@@ -302,8 +303,8 @@
          </div>
           </div>
           </div>
-          <div id ="signup2" class="ylwTpBx clearfix" style="float:none; text-align: center; padding-top: 20px; padding-bottom: 20px;padding-right:0px">
-             <a routerLink="/signup" style="font-weight: 700; font-size: x-large; font-family:'Roboto Condensed', sans-serifm;  color: rgba(0,0,0,0.8);">Start Your Free Trial Today</a>
+          <div id ="signup2" class="blWhtpBx clearfix" style="float:none; text-align: center; padding-top: 20px; padding-bottom: 20px;padding-right:0px">
+             <a routerLink="/signup" style="font-weight: 700; font-size: x-large; font-family:'Roboto Condensed', sans-serifm;  color: #ffffff;">Start Your Free Trial Today</a>
 
           </div>
 
