--- a/src/app/front/components/sign-up/sign-up.component.html
+++ b/src/app/front/components/sign-up/sign-up.component.html
@@ -144,6 +144,8 @@
                 <div class="col-md-8 rp-plan">
                   <p style="padding:2px; margin: 0; color:#f8c534;font-size: x-large;"> 7 Day Free Trial: </p>
                   <p style="padding: 0; margin: 0; color:#f8c534;font-size:x-large; text-align:center;">Fill Out the Form to get Started</p>
+                  <p style="font-size: x-small;padding:2px; color:#f8c534;">** You will automatically be charged for the listed rate at the end of your 7 day trial </p>
+
                 </div>
 
                 <div class="col-md-2">
