--- a/src/app/front/components/plan/plan.component.css
+++ b/src/app/front/components/plan/plan.component.css
@@ -153,3 +153,21 @@
   top: 2px;
 }
 
+.midButton {
+  margin-bottom: 15px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #000;
+  transition: 300ms;
+  color: #f8c534;
+}
+.midButton p{
+  color:#f8c534;
+  align-content: center;
+  text-align: center;
+}
+
