--- a/src/app/front/components/plan/plan.component.html
+++ b/src/app/front/components/plan/plan.component.html
@@ -6,7 +6,7 @@
   <h1 class="page-heading">All Access Packages</h1>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-4 col-lg-3 col-lg-offset-2 col-sm-5 "
+      <div class="col-md-4 col-lg-3 col-lg-offset-2 col-sm-4 "
            [class.col-md-offset-1]="i % 2 == 0"
            [class.col-md-offset-2]="i % 2 != 0"
            [class.col-sm-offset-1]="i % 2 == 0"
@@ -31,6 +31,13 @@
           <!-- <button class="btn-subscribe btn-lg btn-primary" (click)="open(content, plan)">Subscribe
           </button> -->
 
+        </div>
+      </div>
+      <div class= "col-md-2 col-md-1 col-sm-3">
+        <div class="midButton">
+          <p style="padding-bottom: 1px; color: "> First Month Free</p>
+          <p style=" padding-top: 1px; padding-bottom: 1px;"> 0$ </p>
+          <button style="padding-top: 1px;">Find out More</button>
         </div>
       </div>
     </div>
