--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -957,7 +957,18 @@ font-size: 15px;line-height: 23px;width: 100px;text-align: center;padding: 6px;}
 .ylwTpBx2 h3{font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: rgba(0,0,0,0.8);float: left;margin: 0px;}
 .ylwTpBx3{background: #f8c534;padding: 10px 20px;margin-bottom: 20px;}
 .ylwTpBx3 h3{font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: rgba(0,0,0,0.8);float: left;margin: 0px;}
+.blWhtpBx { background: #1493ff; font-family: 'Roboto Condensed', sans-serif;font-weight: 700;color: #ffffff;float: left;margin: 0px; padding-top: 25px;
+  padding-right: 20px;
+  padding-left: 20px;
+  padding-bottom: 25px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  border-top: ridge;
+  border-bottom: ridge;
+  border-width: 5px;
+  border-color: slategray;}
 
+.blWhtpBx  span{display: inline-block;vertical-align: middle;}
 	.indexNPrt2Lft{float:left; margin-right: 0px}
 	.ylwTpBxBtmBxInfo{background: #FFF;padding: 20px;position: relative;}
 	.ylwTpBxBtmBxInfo p{color: rgba(79,79,79,0.7);font-size: 14px; padding-bottom: 10px;}
