--- a/src/app/front/components/daily-lineup/daily-lineup.component.html
+++ b/src/app/front/components/daily-lineup/daily-lineup.component.html
@@ -2,7 +2,7 @@
   <!-- <div class="container-fluid "> -->
   <div class="container">
 
-    <div class="common-loader" *ngIf="isLoading">
+    <div class="common-loader">
       <mat-progress-spinner mode="indeterminate" color="accent" diameter="50"></mat-progress-spinner>
     </div>
     <div class="row">
